--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JATAYUY</title>
-    <link rel="stylesheet" href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\CSS\index.css">
-    <link rel="shortcut icon" href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\JATAYULOGO.png" type="image/x-icon">
+    <link rel="stylesheet" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\CSS\index.css">
+    <link rel="shortcut icon" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" type="image/x-icon">
 </head>
 <body>
     <div id="logo">
         <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\login.html">
-            <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\JATAYULOGO.png" alt="">
+            <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" alt="">
         </a>    
     </div>
     <div id="name"><h2>J A T A Y U</h2></div>
