--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -4,29 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JATAYU</title>
-    <link rel="stylesheet" href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\CSS\profile.css">
-    <link rel="shortcut icon" href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\JATAYULOGO.png" type="image/x-icon">
+    <link rel="stylesheet" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\CSS\profile.css">
+    <link rel="shortcut icon" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" type="image/x-icon">
 </head>
 <body>
         
             <div id="logo">
                 <a href="">
                     <div id="LOGO">
-                        <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\JATAYULOGO.png" alt="">
+                        <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" alt="">
                     </div>
                 </a>
             </div>
 
             <div id="profile_box">
                 <div id="image">
-                    <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\BOY_AVATAR.png" alt="">
+                    <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\BOY_AVATAR.png" alt="">
                 </div>
                 <div id="name">
                     <h4>SHIVANSHU PAL</h4>
                     <h6>palshivanshu2005</h6>
                 </div>
                 <div id="verify_tick">
-                    <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\verify_tick.jpg" alt="">
+                    <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\verify_tick.jpg" alt="">
                 </div>
                 
                 <div id="connect">
