--- a/HTML/protest.html
+++ b/HTML/protest.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JATAYU</title>
-    <link rel="shortcut icon" href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\JATAYULOGO.png" type="image/x-icon">
-    <link rel="stylesheet" href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\CSS\protest.css">
+    <link rel="shortcut icon" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" type="image/x-icon">
+    <link rel="stylesheet" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\CSS\protest.css">
 </head>
 <body>
        <div id="head">
             <div id="logo">
-                <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\JATAYULOGO.png" alt="">
+                <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" alt="">
             </div>
             <div id="activity">
                     <div id="share">
-                        <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\share.png" alt="">
+                        <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\share.png" alt="">
                     </div>
                     <div id="comment">
-                        <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\comment.png" alt="">
+                        <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\comment.png" alt="">
                     </div>
                     <div id="status">
-                        <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\status.png" alt="">
+                        <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\status.png" alt="">
                     </div>
                     <div id="notify">
-                        <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\notification.jpg" alt="">
+                        <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\notification.jpg" alt="">
                     </div>
                     
             </div>
