--- a/HTML/account.html
+++ b/HTML/account.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JATAYU</title>
-    <link rel="shortcut icon" href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\JATAYULOGO.png" type="image/x-icon">
-    <link rel="stylesheet" href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\CSS\account.css">
+    <link rel="shortcut icon" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" type="image/x-icon">
+    <link rel="stylesheet" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\CSS\account.css">
 </head>
 <body>
     <div id="logo">
-        <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\JATAYU\image\JATAYULOGO.png" alt="">
+        <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" alt="jatayu">
     </div>
     <form action="">
         <h1 align="center">Create Account</h1>
