--- a/HTML/home.html
+++ b/HTML/home.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JATAYU</title>
-    <link rel="shortcut icon" href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\JATAYULOGO.png" type="image/x-icon">
-    <link rel="stylesheet" href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\CSS\home.css">
+    <link rel="shortcut icon" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" type="image/x-icon">
+    <link rel="stylesheet" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\CSS\home.css">
 </head>
 <body>
    <div id="header">
         <div id="logo">
             <a href="">
-            <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\JATAYULOGO.png" alt="">
+            <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" alt="">
             </a>
             <h4>J A T A Y U</h4>
         </div>
         <div id="notification">
             <a href="">
-            <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\notification.jpg" alt="">
+            <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\notification.jpg" alt="">
         </a>
         <div id="protest_logo">
             <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\protest.html">
-                <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\protest_logo.png" alt="">
+                <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\protest_logo.png" alt="">
             </a>
         </div>
         </div>
         <div id="search_logo">
             <a href="">
-            <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\search_icon.jpg" alt="">
+            <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\search_icon.jpg" alt="">
             </a>
             </div>
         <input type="search" placeholder="Search">
@@ -67,7 +67,7 @@
         <div id="profile">
             <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\profile.html">
                 <div id="PROFILE">
-                    <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\BOY_AVATAR.png" alt="">
+                    <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\BOY_AVATAR.png" alt="">
                 </div>
             </a>
         </div>
@@ -85,7 +85,7 @@
         <div id="filter">
             <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\filter.html">
                 <div id="filtertopic">
-                    <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\filter.png" alt="">
+                    <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\filter.png" alt="">
                 </div>
             </a>
         </div>
@@ -114,10 +114,10 @@
     <hr>
     <div id="activity">
         <div id="like">
-            <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\like1.png" height="40px" alt="">
+            <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\like1.png" height="40px" alt="">
         </div>
         <div id="dislike">
-            <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\dislike.png" height="40px" alt="">
+            <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\dislike.png" height="40px" alt="">
         </div>
         <div id="comment">
             <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\comment.png" height="40px" width="38px" alt="">
