--- a/HTML/login.html
+++ b/HTML/login.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JATAYU</title>
-    <link rel="shortcut icon" href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\JATAYULOGO.png" type="image/x-icon">
+    <link rel="shortcut icon" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\CSS\login.css">
+    <link rel="stylesheet" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\CSS\login.css">
 </head>
 <body>
         <div id="logo">
-            <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\JATAYULOGO.png" alt="jatayu logo">
+            <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" alt="jatayu logo">
         </div>  
-
         <div id="login">
             <input type="email" placeholder="Enter your email ID">
             <br>
@@ -31,7 +30,7 @@
             <br><br>
             <div id="sign_upbox">
                 <p>Don't have account</p>
-                <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\account.html"><h3>Sign up</h3></a>
+                <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\account.html"><h3>Sign up</h3></a>
             </div>
             
         </div>
