--- a/HTML/politics.html
+++ b/HTML/politics.html
@@ -4,48 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JATAYU</title>
-    <link rel="stylesheet" href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\CSS\politics.css">
-    <link rel="shortcut icon" href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\JATAYULOGO.png" type="image/x-icon">
+    <link rel="stylesheet" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\CSS\politics.css">
+    <link rel="shortcut icon" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" type="image/x-icon">
 </head>
 <body>
        <div id="header">
            <div id="logo">
-            <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\JATAYULOGO.png" alt="">
+            <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" alt="">
            </div>
            <div id="search_logo">
             <a href="">
-                 <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\search_icon.jpg" alt="">
+                 <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\search_icon.jpg" alt="search">
             </a>
         </div>
             <input type="search" placeholder="Search">
        </div>
        <div id="left">
                 <div id="home">
-                    <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\home.html">
-                        <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\home_logo.png" alt="">
+                    <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\home.html">
+                        <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\home_logo.png" alt="">
                     </a>
                 </div>
 
                 <div id="political">
-                    <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\politics.html">
-                        <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\political_logo.png" alt="">
+                    <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\politics.html">
+                        <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\political_logo.png" alt="">
                     </a>
                 </div>
 
                 <div id="short">
                     <a href="">
-                        <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\short_logo.jpg" alt="">
+                        <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\short_logo.jpg" alt="">
                     </a>
                 </div>
 
                 <div id="profile">
-                    <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\profile.html">
-                        <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\BOY_AVATAR_bgr.png" alt="">
+                    <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\profile.html">
+                        <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\BOY_AVATAR.png" alt="">
                     </a>
                 </div>
                 <div id="setting">
-                    <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\setting.html">
-                        <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\setting_logo.png" alt="">
+                    <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\setting.html">
+                        <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\setting_logo.png" alt="">
                     </a>
                 </div>
        </div>
