update on index and log file

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,20 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JATAYUY</title>
+    <title>JATAYU</title>
     <link rel="stylesheet" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\CSS\index.css">
     <link rel="shortcut icon" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" type="image/x-icon">
 </head>
 <body>
     <div id="logo">
         <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\login.html">
-            <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" alt="">
+            <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" alt="JATAYU Logo">
         </a>    
     </div>
     <div id="name"><h2>J A T A Y U</h2></div>
-    <!-- <div id="loading">
-        <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\loading.gif" alt="">
-    </div> -->
-    <span class="loader"></span>
+    <!-- <span class="loader"></span> -->
 </body>
 </html>
