--- a/HTML/protest.html
+++ b/HTML/protest.html
@@ -31,31 +31,31 @@
         <hr>
         <div id="left">
             <div id="home">
-                <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\home.html">
-                    <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\home_logo.png" alt="">
+                <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\home.html">
+                    <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\home_logo.png" alt="">
                 </a>
             </div>
 
             <div id="political">
-                <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\politics.html">
-                    <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\political_logo.png" alt="">
+                <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\politics.html">
+                    <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\political_logo.png" alt="">
                 </a>
             </div>
 
             <div id="short">
-                <a href="">
-                    <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\short_logo.jpg" alt="">
+                <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\shorts.html">
+                    <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\short_logo.jpg" alt="">
                 </a>
             </div>
 
             <div id="profile">
-                <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\profile.html">
-                    <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\BOY_AVATAR_bgr.png" alt="">
+                <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\profile.html">
+                    <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\BOY_AVATAR.png" alt="">
                 </a>
             </div>
             <div id="setting">
-                <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\setting.html">
-                    <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\setting_logo.png" alt="">
+                <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\setting.html">
+                    <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\setting_logo.png" alt="">
                 </a>
             </div>
         </div>
@@ -65,7 +65,7 @@
             </video>
             <div id="join">
                 <div id="box1">
-                    <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\protest_logo.png" alt="">
+                    <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\protest_logo.png" alt="">
                     <div id="joining">
                            <h2>JOIN</h2>
                     </div>
