commiting the all pages

--- a/HTML/account.html
+++ b/HTML/account.html
@@ -52,7 +52,7 @@
           </select>
     </form>
     <div id="next">
-        <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\verification.html">
+        <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\verification.html">
             <div id="next_button">
                 <h4>NEXT</h4>
             </div>
