--- a/HTML/home.html
+++ b/HTML/home.html
@@ -20,7 +20,7 @@
             <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\notification.jpg" alt="">
         </a>
         <div id="protest_logo">
-            <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\protest.html">
+            <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\protest.html">
                 <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\protest_logo.png" alt="">
             </a>
         </div>
@@ -34,14 +34,14 @@
    </div>
    <div id="left">
         <div id="home">
-            <a href="">
+            <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\home.html">
                 <div id="HOME">
                     <h4>HOME</h4>
                 </div>
             </a>
         </div>
         <div id="politics">
-            <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\politics.html">
+            <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\politics.html">
                 <div id="POLITICS">
                     <h4>POLITICS</h4>
                 </div>
@@ -57,7 +57,7 @@
         </div>
 
         <div id="short">
-            <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\shorts.html">
+            <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\shorts.html">
                 <div id="SHORT">
                     <h4>SHORT</h4>
                 </div>
@@ -65,7 +65,7 @@
         </div>
 
         <div id="profile">
-            <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\profile.html">
+            <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\profile.html">
                 <div id="PROFILE">
                     <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\BOY_AVATAR.png" alt="">
                 </div>
@@ -73,7 +73,7 @@
         </div>
 
         <div id="setting">
-            <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\setting.html">
+            <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\setting.html">
                 <div id="SETTING">
                     <h4>Setting</h4>
                 </div>
@@ -83,7 +83,7 @@
    <div id="right">
     <div id="interest">
         <div id="filter">
-            <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\filter.html">
+            <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\filter.html">
                 <div id="filtertopic">
                     <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\filter.png" alt="">
                 </div>
@@ -120,13 +120,13 @@
             <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\dislike.png" height="40px" alt="">
         </div>
         <div id="comment">
-            <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\comment.png" height="40px" width="38px" alt="">
+            <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\comment.png" height="40px" width="38px" alt="">
         </div>
         <div id="share">
-            <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\share.png" height="40px" alt="">
+            <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\share.png" height="40px" alt="">
         </div>
         <div id="report">
-            <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\report.png" height="40px" alt="">
+            <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\report.png" height="40px" alt="">
         </div>
     </div>
     <div id="video">
