--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="logo">
-        <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\login.html">
+        <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\login.html   ">
             <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" alt="JATAYU Logo">
         </a>    
     </div>
