--- a/HTML/opt.html
+++ b/HTML/opt.html
@@ -30,7 +30,7 @@
     </div>
 
     <div id="step_next">
-        <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\home.html">
+        <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\home.html">
             <div id="NEXT">
                 <h4>VERIFY</h4>
             </div>
