--- a/HTML/verification.html
+++ b/HTML/verification.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JATAYU</title>
-    <link rel="stylesheet" href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\CSS\verification.css">
-    <link rel="shortcut icon" href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\JATAYULOGO.png" type="image/x-icon">
+    <link rel="stylesheet" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\CSS\verification.css">
+    <link rel="shortcut icon" href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" type="image/x-icon">
 </head>
 <body>
     <div id="logo">
-        <img src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\JATAYULOGO.png" alt="">
+        <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\JATAYULOGO.png" alt="">
     </div>
-
+ 
     <div id="verify_box">
            <h3>Verification</h3>
            <hr>
@@ -27,7 +27,7 @@
             </a>
            </div>
            <div class="next">
-             <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\opt.html">
+             <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\opt.html">
                 <div class="nextbutton">
                     <h3>NEXT</h3>
                 </div>
