update home page

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -33,52 +33,34 @@
         <input type="search" placeholder="Search">
    </div>
    <div id="left">
-        <div id="home">
-            <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\home.html">
-                <div id="HOME">
-                    <h4>HOME</h4>
-                </div>
-            </a>
-        </div>
-        <div id="politics">
-            <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\politics.html">
-                <div id="POLITICS">
-                    <h4>POLITICS</h4>
-                </div>
-            </a>
-        </div>
+            <div id="home">
+                <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\home.html">
+                    <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\home_logo.png" alt="">
+                </a>
+            </div>
+            <div id="political">
+                <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\politics.html">
+                    <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\political_logo.png" alt="">
+                </a>
+            </div>
 
-        <div id="post">
-            <a href="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\HTML\post.html">
-                <div id="POST">
-                    <h4>POST</h4>
-                </div>
-            </a>
-        </div>
+            <div id="short">
+                <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\shorts.html">
+                    <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\short_logo.jpg" alt="">
+                </a>
+            </div>
 
-        <div id="short">
-            <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\shorts.html">
-                <div id="SHORT">
-                    <h4>SHORT</h4>
-                </div>
-            </a>
-        </div>
-
-        <div id="profile">
-            <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\profile.html">
-                <div id="PROFILE">
+            <div id="profile">
+                <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\profile.html">
                     <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\BOY_AVATAR.png" alt="">
-                </div>
-            </a>
-        </div>
+                </a>
+            </div>
 
-        <div id="setting">
-            <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\setting.html">
-                <div id="SETTING">
-                    <h4>Setting</h4>
-                </div>
-            </a>
-        </div>
+            <div id="setting">
+                <a href="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\HTML\setting.html">
+                    <img src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\setting_logo.png" alt="">
+                </a>
+            </div>
    </div>
    <div id="right">
     <div id="interest">
