--- a/HTML/protest.html
+++ b/HTML/protest.html
@@ -61,7 +61,7 @@
         </div>
         <div id="right">
             <video  width="680" height="540" controls>
-                <source src="C:\Users\Shivanshu\OneDrive\Documents\JATAYU\JATAYU\IMAGE\protest1.mp4">
+                <source src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\protest1.mp4">
             </video>
             <div id="join">
                 <div id="box1">
