--- a/HTML/protest.html
+++ b/HTML/protest.html
@@ -60,8 +60,8 @@
             </div>
         </div>
         <div id="right">
-            <video  width="680" height="540" controls>
-                <source src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\protest1.mp4">
+            <video   controls>
+                <!-- <source src="C:\Users\Shivanshu\OneDrive\Desktop\first\jatayu\image\protest1.mp4"> -->
             </video>
             <div id="join">
                 <div id="box1">
